--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,104 @@
-.App {
+html,body,#root{
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
+
+body{
+  font-family: times;
+}
+
+.board {
+  background-color: #725c4d;
+  display: grid;
+  grid-template-rows: auto 1fr auto 1fr;
+  justify-content: space-evenly;
+  height: 100%;
+}
+
+.handcards {
+  overflow-x: auto;
+  display: flex;
+}
+
+.handcards div{
+  display: grid;
+  justify-items: center;
+  height: 100%;
+  width: 100%;
+  transition: 300ms ease all;
+}
+
+.handcards img{
+  max-height: 100%;
+  max-width: 100%;
+}
+
+
+.handcards button{
+  background-color: #c58851;
+  border:none;
+  height: 30px;
+  text-align: center;
+  font-size: large;
+  border-radius: 4px;
+
+  margin-top: 10px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+}
+
+.hidden{
+  width:0px !important;
+  margin: 0px !important;
+  overflow: hidden !important;
+}
+
+
+.command {
+  text-align: center;
+  font-size: x-large;
+}
+
+.command input{
+  background-color: #c58851;
+  border:none;
+  height: 30px;
+  text-align: center;
+  font-size: x-large;
+  border-radius: 4px;
+
+  margin-bottom: 20px;
+}
+
+.publicCards {
+  align-content: center;
+  overflow: auto;
+  display: grid;
+  grid-auto-flow: column;
+  column-gap:1%;
+}
+
+.publicCards  img{
+  max-height: 100%;
+  max-width: 100%;
+  transition: 300ms ease all;
+  width: 100%;
+}
+
+
+.opponentList{
+  display: grid;
+  grid-auto-flow: column;
+  margin-top: -50px;
+}
+
+.opponent{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.opponent img {
+  height: 100px;
+  margin-right: -20px;
+  margin-left: -20px;
 }
