--- a/src/App.css
+++ b/src/App.css
@@ -11,31 +11,41 @@ body{
 .board {
   background-color: #725c4d;
   display: grid;
-  grid-template-rows: auto 1fr auto 1fr;
-  justify-content: space-evenly;
+  grid-template-rows: auto 1fr auto 2fr;
   height: 100%;
+  justify-content: stretch;
 }
 
-.handcards {
+.cards {
   overflow-x: auto;
   display: flex;
 }
 
-.handcards div{
+.cardpile {
+  overflow: hidden;
+}
+.cardpile img
+{
+  margin-right: -20px;
+  margin-left: -20px;
+}
+
+.cards div{
   display: grid;
   justify-items: center;
   height: 100%;
   width: 100%;
+  min-width: 200px;
   transition: 300ms ease all;
 }
 
-.handcards img{
+.cards img{
   max-height: 100%;
   max-width: 100%;
 }
 
 
-.handcards button{
+.cards button{
   background-color: #c58851;
   border:none;
   height: 30px;
@@ -71,21 +81,6 @@ body{
   margin-bottom: 20px;
 }
 
-.publicCards {
-  align-content: center;
-  overflow: auto;
-  display: grid;
-  grid-auto-flow: column;
-  column-gap:1%;
-}
-
-.publicCards  img{
-  max-height: 100%;
-  max-width: 100%;
-  transition: 300ms ease all;
-  width: 100%;
-}
-
 
 .opponentList{
   display: grid;
@@ -95,10 +90,4 @@ body{
 
 .opponent{
   text-align: center;
-}
-
-.opponent img {
-  height: 100px;
-  margin-right: -20px;
-  margin-left: -20px;
 }
