--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,9 @@ body{
 .board {
   background-color: #725c4d;
   display: grid;
-  grid-template-rows: auto 1fr auto 2fr;
-  height: 100%;
-  justify-content: stretch;
+  grid-template-rows: 0.2fr 1fr auto 2fr;
+  height: 100vh;
+  justify-items: center;
 }
 
 .cards {
@@ -22,12 +22,14 @@ body{
 }
 
 .cardpile {
-  overflow: hidden;
+  height:100px;
 }
 .cardpile img
 {
-  margin-right: -20px;
+  max-height: 100%;
+  max-width: 100%;
   margin-left: -20px;
+  margin-right: -20px;
 }
 
 .cards div{
@@ -86,6 +88,10 @@ body{
   display: grid;
   grid-auto-flow: column;
   margin-top: -50px;
+  max-height: 100%;
+  max-width: 100%;
+  column-gap: 20px;
+  width: 100%;
 }
 
 .opponent{
