--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,11 @@ body{
   margin-right: -20px;
 }
 
-.cards div{
+.cards .container{
   display: grid;
   justify-items: center;
+  align-content: start;
+  row-gap: 10px;
   height: 100%;
   width: 100%;
   min-width: 200px;
