--- a/src/components/LobbyPage/style.module.scss
+++ b/src/components/LobbyPage/style.module.scss
@@ -2,10 +2,9 @@
 
 .lobbyPage {
   position: relative;
-  padding: 40px 60px;
   width: 100%;
   height: 100vh;
-  background: $c-violet;
+  background: $c-yellow;
   display: flex;
   align-items: center;
   justify-content: center;
