--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,6 +7,7 @@ $c-green: #11c759;
 $c-ocean-green: #3fe2c5;
 $c-yellow: #f8c032;
 $c-violet: #b264d2;
-$c-pink: #ef69b1;
+$c-brown: #9c6c41;
 $c-light-yellow: #ffc876;
 $c-ocean-blue: #5cdefb;
+$c-orange: #c58851;
