--- a/src/components/Lobby/style.scss
+++ b/src/components/Lobby/style.scss
@@ -20,8 +20,8 @@
   }
 
   &__link-box {
-    border: 3px solid darken($c-violet, 10%);
-    background: darken($c-violet, 5%);
+    border: 3px solid darken($c-orange, 10%);
+    background: darken($c-orange, 5%);
     font-size: 18px;
     color: $c-white;
     padding: 12px 32px;
