--- a/src/components/LobbyPage/style.module.scss
+++ b/src/components/LobbyPage/style.module.scss
@@ -4,7 +4,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  background: $c-yellow;
+  background: $c-brown;
   display: flex;
   align-items: center;
   justify-content: center;
