--- a/src/components/Board/CardPile/style.module.scss
+++ b/src/components/Board/CardPile/style.module.scss
@@ -7,6 +7,9 @@
     align-self: center;
     text-align: center;
     width: 100%;
+
+    grid-row: 2;
+    grid-column: 2/3;
   }
   &__image {
     max-height: 100%;
