--- a/src/components/Board/ScoreBoard/style.scss
+++ b/src/components/Board/ScoreBoard/style.scss
@@ -8,14 +8,14 @@
 
     padding: 5px 10px;
     margin: 10px 10px;
-    
+
     align-self: start;
     justify-self: stretch;
 
     grid-row: 1/3;
     grid-column: 1;
   }
-  
+
   &__player {
     color: $c-black;
     font-weight: 500;
@@ -29,5 +29,7 @@
   &__points {
     float: right;
   }
-
+  &__rounds {
+    margin-top: 1em;
+  }
 }
